2002-07-26  Gary Thomas  <gary@chez-thomas.org>
2002-07-26  Ken Cox <jkc@redhat.com>

	* src/ecos/support.c (ovbcopy): ovbcopy() must handle the case 
	where the src and dst regions are overlayed.  memcpy() does not 
	handle this case, but memmove() does.

2002-07-10  Gary Thomas  <gary@chez-thomas.org>

	* src/sys/netinet/udp_usrreq.c: 
	* src/sys/netinet/tcp_subr.c: 
	* src/sys/netinet/in_pcb.c: Rename 'errno' function parameter
	since some compilers have problems with this.

2002-07-08  Gary Thomas  <gary@chez-thomas.org>

	* include/sys/param.h: Need <errno.h> which may or may not be
	already present, depending on configuration.

2002-06-20  Gary Thomas  <gary@chez-thomas.org>

	* include/sys/param.h (sprintf): Map to diag_sprintf().

2002-06-14  Gary Thomas  <gary@chez-thomas.org>

	* src/ecos/support.c: 
	Fix compile errors when CYGDBG_NET_TIMING_STATS enabled.

2002-06-05  Gary Thomas  <gary@chez-thomas.org>

	* include/netinet/in.h: Rename 'ip_opts' field (using the same
	name as the structure is illegal in C++).

2002-05-14  Jesper Skov  <jskov@redhat.com>

	* include/netinet6/in6.h: Fixed warnings.

2002-04-22  Gary Thomas  <gthomas@redhat.com>

	* src/sys/netinet6/nd6.c: Make debug (on) default.

	* include/netinet/tcp_debug.h: Fully conditionalize debug facility.

2002-04-17  Gary Thomas  <gthomas@redhat.com>

	* include/sys/socket.h: Remove definitions only used by sysctl
	since their presence could be misleading.

	* src/ecos/support.c (STACK_SIZE): Remove [debug/testing] bloat.

2002-03-30  Gary Thomas  <gthomas@redhat.com>

	* include/machine/types.h: [Placeholder] needed for some compilers.

2002-03-28  Gary Thomas  <gthomas@redhat.com>

	* src/sys/netinet/ip_icmp.c: 
	* include/sys/param.h: 
	* include/netinet/icmp_var.h: Export status structure for SNMP.

	* cdl/freebsd_net.cdl: Augment log facilities to what SNMP uses.

2002-03-27  Gary Thomas  <gthomas@redhat.com>

	* include/sys/param.h (log): Remove warning.
